Blender 2.8: Sculpting Tools Working Incosistently on MultiResolutioned Meshes #61961

Closed
opened 2019-02-26 03:55:05 +01:00 by Avi · 3 comments

Blender Version
Broken:
2.80, 54ffc4e19d, blender2.8, 2019-02-25
Worked:
2.79b

Short description of error

When using Sculpt mode on a non-quad-based MultiResolutioned mesh, sculpting on a level other than level 0 results in deformed geometry that is not present in 2.79 or when sculpting the item with the MultiResolution modifier applied

Exact steps for others to reproduce the error

Enter the Default scene, and remove the Cube. Add a UVSphere, and add a MultiResolution modifier to the object. Add a subdivision level, and enter sculpt mode. Select the Smooth brush, run it over the object's surface, and observe the odd resultant topology. Edge loops are not maintained properly straight, as they were in 2.79.

This also shows up on an IcoSphere. Add one, and add a MultiResolution modifier to the object. Subdivide many times, enter sculpt mode, and use the smooth brush. You'll immediately see that the topology morphs in a very non-uniform way.

This does not reproduce on a Cube. I believe that this is because the tool works properly with a fully-quad-based mesh, or the Cube otherwise meets some assumption the code is making.

If you apply the MultiResolution modifier, and sculpt on the resultant subdivided geometry, you will see the intended behavior. Edge Loops and face area (relative to other affected faces) are maintained. This is the same behavior exhibited in 2.79 when sculpting WITH MultiResolution.

bugreportsculpt.blend

**Blender Version** Broken: 2.80, 54ffc4e19dc4, blender2.8, 2019-02-25 Worked: 2.79b **Short description of error** When using Sculpt mode on a non-quad-based MultiResolutioned mesh, sculpting on a level other than level 0 results in deformed geometry that is not present in 2.79 or when sculpting the item with the MultiResolution modifier applied **Exact steps for others to reproduce the error** Enter the Default scene, and remove the Cube. Add a UVSphere, and add a MultiResolution modifier to the object. Add a subdivision level, and enter sculpt mode. Select the Smooth brush, run it over the object's surface, and observe the odd resultant topology. Edge loops are not maintained properly straight, as they were in 2.79. This also shows up on an IcoSphere. Add one, and add a MultiResolution modifier to the object. Subdivide many times, enter sculpt mode, and use the smooth brush. You'll immediately see that the topology morphs in a very non-uniform way. This does not reproduce on a Cube. I believe that this is because the tool works properly with a fully-quad-based mesh, or the Cube otherwise meets some assumption the code is making. If you apply the MultiResolution modifier, and sculpt on the resultant subdivided geometry, you will see the intended behavior. Edge Loops and face area (relative to other affected faces) are maintained. This is the same behavior exhibited in 2.79 when sculpting WITH MultiResolution. [bugreportsculpt.blend](https://archive.blender.org/developer/F6714989/bugreportsculpt.blend)
Author

Added subscriber: @AviTudios

Added subscriber: @AviTudios
Sergey Sharybin was assigned by Sebastian Parborg 2019-02-26 16:36:00 +01:00

This issue was referenced by bfebb494f6

This issue was referenced by bfebb494f634ce3b8c6c468bac72d2abc51af45b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61961
No description provided.